[package]
name = "ps-range"
version = "0.1.0-3"
edition = "2021"
description = "generalized range trait"
license = "GPL-3.0-or-later"

[dependencies]
num-traits = "0.2.19"

[lints]
clippy.expect_used = "warn"
clippy.nursery.level = "warn"
clippy.nursery.priority = -1
clippy.pedantic.level = "deny"
clippy.pedantic.priority = -1
clippy.redundant_pub_crate = "allow"
clippy.unwrap_used = "deny"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
